本地数据库配置
* 更改用户名
* 更改用户密码

--- a/playJavaApp/conf/application.conf
+++ b/playJavaApp/conf/application.conf
@@ -370,8 +370,8 @@ db {
   #default.password = ""
   default.driver=com.mysql.jdbc.Driver
   default.url="jdbc:mysql://127.0.0.1:3306/todolist?characterEncoding=UTF-8"
-  default.user="root"
-  default.password="abcd1234"
+  default.user="crm_pf_dev"
+  default.password="Abcd1234"
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
