增加redis工具类以及扩展项目配置文件

--- a/playJavaApp/conf/application.conf
+++ b/playJavaApp/conf/application.conf
@@ -58,7 +58,7 @@ play.modules {
   # explicitly below.
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
-  enabled += modules.MyBatisModule
+  enabled += modules.AppModule
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
 }
@@ -155,7 +155,7 @@ play.http {
     #httpOnly = true
   }
 }
-
+#play.http.requestHandler = "filters.RequestHandler"
 ## Netty Provider
 # https://www.playframework.com/documentation/latest/SettingsNetty
 # ~~~~~
@@ -376,3 +376,5 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+include "env/app-env.conf"
