更新数据库参数，指向ci部署测试库

--- a/playJavaApp/conf/application.conf
+++ b/playJavaApp/conf/application.conf
@@ -369,9 +369,9 @@ db {
   #default.username = sa
   #default.password = ""
   default.driver=com.mysql.jdbc.Driver
-  default.url="jdbc:mysql://127.0.0.1:3306/todolist?characterEncoding=UTF-8"
+  default.url="jdbc:mysql://mysql.nhry-dev.com:3306/nhry_pf_dev?characterEncoding=UTF-8"
   default.user="crm_pf_dev"
-  default.password="Abcd1234"
+  default.password="Abcd1234!"
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
