异常处理提交

--- a/NhryService/src/main/webapp/WEB-INF/web.xml
+++ b/NhryService/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,10 @@
 		</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>com.nhry.rest</param-value>
+      <param-value>
+      		com.nhry.rest
+      		com.nhry.exception
+      </param-value>
     </init-param>
     <init-param>
       <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
