--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -424,6 +424,20 @@
 						<argLine>-Dfile.encoding=UTF-8</argLine>
 					</configuration>
 				</plugin>
+				<!-- resources插件 -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.6</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
