--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -3,14 +3,14 @@
 #============================#
 #mysql database setting
 master1.jdbc.driver=com.mysql.jdbc.Driver
-master1.jdbc.url=jdbc:mysql://localhost:3306/todolist?useUnicode=true&characterEncoding=utf-8
+master1.jdbc.url=jdbc:mysql://54.222.180.69:3306/nhdb?useUnicode=true&characterEncoding=utf-8
 master1.jdbc.username=root
-master1.jdbc.password=abcd1234
+master1.jdbc.password=Abcd1234!
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
-slave1.jdbc.url=jdbc:mysql://localhost:3306/todolist?useUnicode=true&characterEncoding=utf-8
+slave1.jdbc.url=jdbc:mysql://54.222.203.63:3306/nhdb?useUnicode=true&characterEncoding=utf-8
 slave1.jdbc.username=root
-slave1.jdbc.password=abcd1234
+slave1.jdbc.password=Abcd1234!
 
 slave2.jdbc.driver=com.mysql.jdbc.Driver
 slave2.jdbc.url=jdbc:mysql://localhost:3306/todolist?useUnicode=true&characterEncoding=utf-8
@@ -50,4 +50,3 @@ oa.notify.remind.interval=60000
 web.maxUploadSize=10485760
 
 app_mode=developer
-sys=\u5F20
