--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -13,9 +13,9 @@ slave1.jdbc.username=root
 slave1.jdbc.password=Abcd1234!
 
 slave2.jdbc.driver=com.mysql.jdbc.Driver
-slave2.jdbc.url=jdbc:mysql://localhost:3306/todolist?useUnicode=true&characterEncoding=utf-8
+slave2.jdbc.url=jdbc:mysql://54.222.203.63:3306/nhdb?useUnicode=true&characterEncoding=utf-8
 slave2.jdbc.username=root
-slave2.jdbc.password=abcd1234
+slave2.jdbc.password=Abcd1234!
 
 jdbc.pool.init=1
 jdbc.pool.minIdle=3
