解决war包还是没把Mybatis的mapper.xml文件打进去的问题

--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -382,7 +382,16 @@
     <!-- 插件配置 -->
     <build>
         <finalName>NhryService</finalName>
-
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
         <plugins>
             <!-- 源码插件 -->
             <plugin>
