--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -35,6 +35,12 @@
 	<dependencies>
 		<!-- SPRING begin -->
 		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.6</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
