--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -319,36 +319,17 @@
 		</dependency>
 		<!-- swagger-springmvc -->
 		<dependency>
-			<groupId>com.mangofactory</groupId>
-			<artifactId>swagger-springmvc</artifactId>
-			<version>1.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.mangofactory</groupId>
-			<artifactId>swagger-models</artifactId>
-			<version>1.0.2</version>
-		</dependency>
-		<dependency>
 			<groupId>com.wordnik</groupId>
 			<artifactId>swagger-annotations</artifactId>
 			<version>1.3.11</version>
 		</dependency>
 		<!-- swagger-springmvc -->
-		<dependency>
-			<groupId>com.mangofactory</groupId>
-			<artifactId>swagger-springmvc</artifactId>
-			<version>1.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.mangofactory</groupId>
-			<artifactId>swagger-models</artifactId>
-			<version>1.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.wordnik</groupId>
-			<artifactId>swagger-annotations</artifactId>
-			<version>1.3.11</version>
-		</dependency>
+<dependency>
+    <groupId>com.wordnik</groupId>
+    <artifactId>swagger-jersey-jaxrs_2.10</artifactId>
+    <version>1.3.9</version>
+</dependency>
+
 		<!-- swagger-springmvc dependencies -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
