--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -376,9 +376,12 @@
 			<artifactId>jedis</artifactId>
 			<version>2.7.3</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.1.0</version>
+		</dependency>
 	</dependencies>
-
 	<!-- 插件配置 -->
 	<build>
 		<finalName>NhryService</finalName>
