--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -3,19 +3,19 @@
 #============================#
 #mysql database setting
 master1.jdbc.driver=com.mysql.jdbc.Driver
-master1.jdbc.url=jdbc:mysql://127.0.0.1:3306/todolist?useUnicode=true&characterEncoding=utf-8
+master1.jdbc.url=jdbc:mysql://54.222.180.69:3306/nhdb?useUnicode=true&characterEncoding=utf-8
 master1.jdbc.username=root
 master1.jdbc.password=abcd1234
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
-slave1.jdbc.url=jdbc:mysql://127.0.0.1:3306/todolist?useUnicode=true&characterEncoding=utf-8
+slave1.jdbc.url=jdbc:mysql://54.222.180.69:3306/nhdb?useUnicode=true&characterEncoding=utf-8
 slave1.jdbc.username=root
-slave1.jdbc.password=abcd1234
+slave1.jdbc.password=Abcd1234!
 
 slave2.jdbc.driver=com.mysql.jdbc.Driver
-slave2.jdbc.url=jdbc:mysql://127.0.0.1:3306/todolist?useUnicode=true&characterEncoding=utf-8
+slave2.jdbc.url=jdbc:mysql://54.222.180.69:3306/nhdb?useUnicode=true&characterEncoding=utf-8
 slave2.jdbc.username=root
-slave2.jdbc.password=abcd1234
+slave2.jdbc.password=Abcd1234!
 
 jdbc.pool.init=1
 jdbc.pool.minIdle=3
