--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -5,7 +5,7 @@
 master1.jdbc.driver=com.mysql.jdbc.Driver
 master1.jdbc.url=jdbc:mysql://54.222.180.69:3306/nhdb?useUnicode=true&characterEncoding=utf-8
 master1.jdbc.username=root
-master1.jdbc.password=abcd1234
+master1.jdbc.password=Abcd1234!
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
 slave1.jdbc.url=jdbc:mysql://54.222.180.69:3306/nhdb?useUnicode=true&characterEncoding=utf-8
