--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -24,7 +24,7 @@ jdbc.pool.maxActive=20
 ## dataSource common config
 jdbc.initialSize=5
 jdbc.minIdle=5
-jdbc.maxActive=100
+jdbc.maxActive=200
 jdbc.maxWait=60000
 jdbc.timeBetweenEvictionRunsMillis=60000
 jdbc.minEvictableIdleTimeMillis=300000
@@ -43,6 +43,15 @@ supcan.useCache=false
 #\u901a\u77e5\u95f4\u9694\u65f6\u95f4\u8bbe\u7f6e, \u5355\u4f4d\uff1a\u6beb\u79d2, 30s=30000ms, 60s=60000ms
 oa.notify.remind.interval=60000
 
+#=========redis settings===================#
+redis.minIdle=5
+redis.maxIdle=10
+redis.maxActive=200
+redis.maxWait=3000
+redis.testOnBorrow=true
+redis.host=54.222.218.2
+redis.port=6379
+#=========redis settings end===================#
 #============================#
 #==== Framework settings ====#
 #============================#
