--- a/NhryService/src/main/webapp/WEB-INF/web.xml
+++ b/NhryService/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>JerseyServlet</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
+    <url-pattern>/api/v1/*</url-pattern>
   </servlet-mapping>
    <servlet>
     <servlet-name>ApiServlet</servlet-name>
@@ -55,7 +55,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>ApiServlet</servlet-name>
-    <url-pattern>/api</url-pattern>
+    <url-pattern>/api/docs</url-pattern>
   </servlet-mapping>
   <servlet>
     <servlet-name>DefaultJaxrsConfig</servlet-name>
@@ -70,7 +70,7 @@
     </init-param>
     <init-param>
       <param-name>swagger.api.basepath</param-name>
-      <param-value>/NhryService/rest</param-value>
+      <param-value>/api/v1</param-value>
     </init-param>
     <load-on-startup>2</load-on-startup>
   </servlet>
