--- a/NhryService/src/main/webapp/WEB-INF/web.xml
+++ b/NhryService/src/main/webapp/WEB-INF/web.xml
@@ -70,7 +70,7 @@
     </init-param>
     <init-param>
       <param-name>swagger.api.basepath</param-name>
-      <param-value>/api/v1</param-value>
+      <param-value>/NhryService/api/v1</param-value>
     </init-param>
     <load-on-startup>2</load-on-startup>
   </servlet>
