--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -449,7 +449,7 @@
 					<argLine>-Dfile.encoding=UTF-8</argLine>
 				</configuration>
 			</plugin>
-			<!-- generator 插件-->
+			<!-- generator 自动生成器 插件-->
 			<plugin>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
