--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -449,7 +449,7 @@
 					<argLine>-Dfile.encoding=UTF-8</argLine>
 				</configuration>
 			</plugin>
-			<!-- generator 自动生成器 插件-->
+			<!-- generator 自动生成器 插件
 			<plugin>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
@@ -468,6 +468,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 			<!-- resources插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
