--- a/NhryService/src/main/resources/log4j.properties
+++ b/NhryService/src/main/resources/log4j.properties
@@ -19,3 +19,18 @@ log4j.appender.L.File=/u01/tmp/nhry_error.log
 log4j.appender.L.DatePattern='_'yyyy-MM-dd'.log'    
 log4j.appender.L.layout=org.apache.log4j.PatternLayout    
 log4j.appender.L.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss} [%5p] - %c -%F(%L) -%m%n  
+
+
+
+#log4j.rootLogger=DEBUG, Console  
+#  
+##Console  
+#log4j.appender.Console=org.apache.log4j.ConsoleAppender  
+#log4j.appender.Console.layout=org.apache.log4j.PatternLayout  
+#log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n  
+#  
+#log4j.logger.java.sql.ResultSet=INFO  
+#log4j.logger.org.apache=INFO  
+#log4j.logger.java.sql.Connection=DEBUG  
+#log4j.logger.java.sql.Statement=DEBUG  
+#log4j.logger.java.sql.PreparedStatement=DEBUG 
