--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -411,7 +411,7 @@
 		</resources>
 		<plugins>
 		<!-- generator 自动生成器 插件-->
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.3.2</version>
@@ -428,7 +428,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			<!-- 源码插件 -->
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
