增加axis2相关jar包，PI接口相关基本配置，物料接口功能代码，增加物料调度任务，明天23：59自动执行。

--- a/NhryService/src/main/resources/log4j.properties
+++ b/NhryService/src/main/resources/log4j.properties
@@ -33,4 +33,6 @@ log4j.appender.L.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss} [%5p] - %c -
 #log4j.logger.org.apache=INFO  
 #log4j.logger.java.sql.Connection=DEBUG  
 #log4j.logger.java.sql.Statement=DEBUG  
-#log4j.logger.java.sql.PreparedStatement=DEBUG 
+#log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.com.ibatis=debug
+log4j.logger.java.sql=debug
