--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -387,17 +387,6 @@
 		    <artifactId>shiro-core</artifactId>
 		    <version>1.2.4</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-			<version>3.0.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http</artifactId>
-			<version>3.0.5</version>
-		</dependency>
-
 	</dependencies>
 	<!-- 插件配置 -->
 	<build>
@@ -421,6 +410,25 @@
 			</resource>
 		</resources>
 		<plugins>
+		<!-- generator 插件-->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+					<verbose>true</verbose>
+					<overwrite>true</overwrite>
+				</configuration>
+				<executions>
+					<execution>
+						<id>Generate MyBatis Artifacts</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- 源码插件 -->
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
