客户主数据接口开发，基本功能已经实现，数据可以取到，细节上待补充

--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -2,8 +2,10 @@ PI.MasterData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?
 PI.MasterData.USERNAME = ZT_CONN
 PI.MasterData.PASSWORD = CANDYTOZT
 PI.MasterData.mATQUERY.SIGN = I
-PI.MasterData.mATQUERY.OPTION = EQ
-PI.MasterData.mATQUERY.LOW = Z005
+PI.MasterData.mATQUERY.OPTION.EQ = EQ
+PI.MasterData.mATQUERY.OPTION.BT = BT
 PI.MasterData.mATQUERY.VKORG = 13
+
+
 
 
