交货单查询，奶站供应商接口调整

--- a/NhryService/src/main/resources/generator.properties
+++ b/NhryService/src/main/resources/generator.properties
@@ -3,16 +3,16 @@
 targetProject=C:/works/coding/nhry-platform/NhryService/src/main/java
 
 #===========generate  *Mapper.xml file Path=================#
-sqlTargetPackage=com.nhry.data.basic.xml
+sqlTargetPackage=com.nhry.data.stock.xml
 
 #===========generate  *Mapper.java file Path =================#
-mapperTargetPackage=com.nhry.data.basic.dao
+mapperTargetPackage=com.nhry.data.stock.dao
 
 #===========generate *MapperImpl.java file Path =================#
-mapperImplTargetPackage=com.nhry.data.basic.impl
+mapperImplTargetPackage=com.nhry.data.stock.impl
 
 #===========generate  bean file path =================#
-modelTargetPackage=com.nhry.data.basic.domain
+modelTargetPackage=com.nhry.data.stock.domain
 
 
 
