--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -9,7 +9,9 @@ PI.MasterData.mATQUERY.LOW = Z005
 PI.MasterData.mATQUERY.ZORM = ZORM
 
 PI.MasterData.mATQUERY.VKORG = 13
-
+#²úÆ·²ã´Î
+PI.PRODH = 20
+#
 PI.SPART = 01
 PI.AUART = ZOR
 PI.BusinessData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_BusinessData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
