--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -30,6 +30,7 @@
 		<guava.version>17.0</guava.version>
 		<poi.version>3.9</poi.version>
 		<jetty.version>9.3.8.v20160314</jetty.version>
+		<cxf.version>3.1.4</cxf.version>
 		<axis-version>1.7.3</axis-version>
 		<!-- jdbc driver setting -->
 		<mysql.driver.version>5.1.30</mysql.driver.version>
@@ -387,7 +388,27 @@
 			<artifactId>shiro-core</artifactId>
 			<version>1.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http-jetty</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
 
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.11</version>
+		</dependency>
 		<!-- axis2 begin -->
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
