--- a/NhryService/src/main/webapp/WEB-INF/web.xml
+++ b/NhryService/src/main/webapp/WEB-INF/web.xml
@@ -66,6 +66,18 @@
     <url-pattern>/idm/auth</url-pattern>
   </servlet-mapping>
 	<servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class>
+			org.apache.cxf.transport.servlet.CXFServlet
+		</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>CXFServlet</servlet-name>
+		<url-pattern>/ws/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
 		<servlet-name>DefaultJaxrsConfig</servlet-name>
 		<servlet-class>com.wordnik.swagger.jaxrs.config.DefaultJaxrsConfig</servlet-class>
 		<init-param>
