--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -626,6 +626,33 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			<!-- jetty插件, 设定context path与spring profile -->
+			<plugin>
+				<!-- <groupId>org.mortbay.jetty</groupId> <artifactId>jetty-maven-plugin</artifactId> 
+					<version>${jetty.version}</version> <configuration> <systemProperties> <systemProperty> 
+					<name>spring.profiles.active</name> <value>development</value> </systemProperty> 
+					</systemProperties> <useTestClasspath>true</useTestClasspath> <webAppConfig> 
+					<contextPath>/${project.artifactId}</contextPath> </webAppConfig> </configuration> -->
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty.version}</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<webApp>
+						<contextPath>/NhryService</contextPath>
+					</webApp>
+				</configuration>
+
+			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<verbose>true</verbose>
+					<overwrite>true</overwrite>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
