提交推送电商失败消息记录功能

--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -59,3 +59,9 @@ redis.port=6379
 web.maxUploadSize=10485760
 
 app_mode=developer
+
+#===============task config=====================#
+corePoolSize=5
+keepAliveSeconds=30000
+maxPoolSize=1000
+queueCapacity=200
