--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -49,7 +49,7 @@ redis.maxIdle=10
 redis.maxActive=200
 redis.maxWait=3000
 redis.testOnBorrow=true
-redis.host=54.222.218.2
+redis.host=redis.nhry-dev.com
 redis.port=6379
 #=========redis settings end===================#
 #============================#
