--- a/NhryService/src/main/resources/redis.properties
+++ b/NhryService/src/main/resources/redis.properties
@@ -1,5 +1,5 @@
 #=========redis settings===================#
-host=54.222.218.2
+host=redis.nhry-dev.com
 port=6379
 connectionTimeout=5000
 soTimeout=5000
