--- a/NhryService/src/main/resources/nhry-prod.properties
+++ b/NhryService/src/main/resources/nhry-prod.properties
@@ -3,17 +3,17 @@
 #============================#
 #mysql database setting
 master1.jdbc.driver=com.mysql.jdbc.Driver
-master1.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_dev?useUnicode=true&characterEncoding=utf-8
+master1.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
 master1.jdbc.username=admin
 master1.jdbc.password=cwb85953221.com
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
-slave1.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_dev?useUnicode=true&characterEncoding=utf-8
+slave1.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
 slave1.jdbc.username=admin
 slave1.jdbc.password=cwb85953221.com
 
 slave2.jdbc.driver=com.mysql.jdbc.Driver
-slave2.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_dev?useUnicode=true&characterEncoding=utf-8
+slave2.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
 slave2.jdbc.username=admin
 slave2.jdbc.password=cwb85953221.com
 
