--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -29,5 +29,11 @@ PI.MESSAGE.FLAG.OK = S
 PI.MESSAGE.FLAG.ERROR = E
 
 
+SMS.URL = https://smsapi.ums86.com:9600/sms_hb/services/Sms?wsdl
+SMS.SpCode = 228672
+SMS.LoginName = sc_xhry
+SMS.Password = ry85953221.com
+
+
 
 
