相关接口调整，crm 积分活动，会员创建等

--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -17,7 +17,6 @@ PI.AUART.ZOR = ZOR
 PI.AUART.ZOR1 = ZOR1
 PI.AUART.ZFD = ZFD
 PI.AUART.ZFD1 = ZFD1
-
 PI.SALEORG_TX = 4181
 
 PI.BusinessData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_BusinessData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
@@ -27,7 +26,8 @@ PI.VipDetialData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServl
 
 PI.MESSAGE.FLAG.OK = S
 PI.MESSAGE.FLAG.ERROR = E
-
+#获取交货单日期，川乳和
+PI.SALESORG =
 
 SMS.URL = https://smsapi.ums86.com:9600/sms_hb/services/Sms?wsdl
 SMS.SpCode = 228672
