--- a/NhryService/src/main/resources/nhry-prod.properties
+++ b/NhryService/src/main/resources/nhry-prod.properties
@@ -3,7 +3,7 @@
 #============================#
 #mysql database setting
 master1.jdbc.driver=com.mysql.jdbc.Driver
-master1.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprddb?useUnicode=true&characterEncoding=utf-8
+master1.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
 master1.jdbc.username=admin
 master1.jdbc.password=LockOn.org.hdms
 
@@ -15,7 +15,7 @@ slave1.jdbc.password=LockOn.org.hdms
 slave2.jdbc.driver=com.mysql.jdbc.Driver
 slave2.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
 slave2.jdbc.username=admin
-slave2.jdbc.password=cwb85953221.com
+slave2.jdbc.password=LockOn.org.hdms
 
 jdbc.pool.init=1
 jdbc.pool.minIdle=3
