--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -318,37 +318,42 @@
 		</dependency>
 		<!-- swagger-springmvc -->
 		<dependency>
-			<groupId>com.wordnik</groupId>
-			<artifactId>swagger-annotations</artifactId>
-			<version>1.3.11</version>
+		    <groupId>io.swagger</groupId>
+		    <artifactId>swagger-annotations</artifactId>
+		    <version>1.5.9</version>
 		</dependency>
 		<!-- swagger-springmvc -->
 		<dependency>
-			<groupId>com.wordnik</groupId>
-			<artifactId>swagger-jersey-jaxrs_2.10</artifactId>
-			<version>1.3.9</version>
+		    <groupId>com.wordnik</groupId>
+		    <artifactId>swagger-jersey-jaxrs_2.10</artifactId>
+		    <version>1.3.12</version>
 		</dependency>
 
 		<!-- swagger-springmvc dependencies -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.4.4</version>
+			<version>2.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.4.4</version>
+			<version>2.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.4.4</version>
+			<version>2.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml</groupId>
 			<artifactId>classmate</artifactId>
 			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-smile</artifactId>
+		    <version>2.8.1</version>
 		</dependency>
 
 		<dependency>
@@ -522,6 +527,11 @@
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-core</artifactId>
 		    <version>4.1.0.RELEASE</version>
+		</dependency>
+         <dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-elasticsearch</artifactId>
+		    <version>2.0.0.RELEASE</version>
 		</dependency>
 	</dependencies>
 	<!-- 插件配置 -->
