--- a/NhryService/pom.xml
+++ b/NhryService/pom.xml
@@ -10,12 +10,12 @@
 	<!-- 项目属性 -->
 	<properties>
 		<!-- main version setting -->
-		<spring.version>4.0.8.RELEASE</spring.version>
+		<spring.version>4.1.6.RELEASE</spring.version>
 		<validator.version>5.1.1.Final</validator.version>
 		<mybatis.version>3.2.8</mybatis.version>
 		<mybatis-spring.version>1.2.2</mybatis-spring.version>
 		<mybatis-generator.version>1.3.2</mybatis-generator.version>
-		<druid.version>1.0.11</druid.version>
+		<druid.version>1.0.18</druid.version>
 
 		<!-- tools version setting -->
 		<slf4j.version>1.7.7</slf4j.version>
@@ -32,6 +32,7 @@
 		<jetty.version>9.3.8.v20160314</jetty.version>
 		<cxf.version>3.1.4</cxf.version>
 		<axis-version>1.7.3</axis-version>
+		<jersey.version>1.19</jersey.version>
 		<!-- jdbc driver setting -->
 		<mysql.driver.version>5.1.30</mysql.driver.version>
 	</properties>
@@ -256,22 +257,22 @@
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-core</artifactId>
-			<version>1.19</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
-			<version>1.19</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>1.19</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
-			<version>1.19</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
@@ -281,12 +282,12 @@
 		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-multipart</artifactId>
-			<version>1.19</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-spring</artifactId>
-			<version>1.19</version>
+			<version>${jersey.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-aop</artifactId>
@@ -374,9 +375,9 @@
 		</dependency>
 		<!-- quartz定时任务 -->
 		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>
-			<version>1.8.5</version>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
