添加定时清除无效token定时任务、添加redis、app配置

--- a/NhryService/src/main/resources/nhry-test.properties
+++ b/NhryService/src/main/resources/nhry-test.properties
@@ -3,19 +3,19 @@
 #============================#
 #mysql database setting
 master1.jdbc.driver=com.mysql.jdbc.Driver
-master1.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
+master1.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
 master1.jdbc.username=admin
-master1.jdbc.password=LockOn.org.hdms
+master1.jdbc.password=cwb85953221.com
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
-slave1.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
+slave1.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
 slave1.jdbc.username=admin
-slave1.jdbc.password=LockOn.org.hdms
+slave1.jdbc.password=cwb85953221.com
 
 slave2.jdbc.driver=com.mysql.jdbc.Driver
-slave2.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
+slave2.jdbc.url=jdbc:mysql://hdmsdevdb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
 slave2.jdbc.username=admin
-slave2.jdbc.password=LockOn.org.hdms
+slave2.jdbc.password=cwb85953221.com
 
 jdbc.pool.init=1
 jdbc.pool.minIdle=3
@@ -49,7 +49,7 @@ redis.maxIdle=10
 redis.maxActive=200
 redis.maxWait=3000
 redis.testOnBorrow=true
-redis.host=prd-vpc-elc-hdms.xdmjf2.ng.0001.cnn1.cache.amazonaws.com.cn
+redis.host=redis.nhry-dev.com
 redis.port=6379
 #=========redis settings end===================#
 #============================#
