--- a/NhryService/src/main/resources/nhry-prod.properties
+++ b/NhryService/src/main/resources/nhry-prod.properties
@@ -8,14 +8,9 @@ master1.jdbc.username=admin
 master1.jdbc.password=LockOn.org.hdms
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
-slave1.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
+slave1.jdbc.url=jdbc:mysql://hdmsprdcopy.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
 slave1.jdbc.username=admin
 slave1.jdbc.password=LockOn.org.hdms
-
-slave2.jdbc.driver=com.mysql.jdbc.Driver
-slave2.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
-slave2.jdbc.username=admin
-slave2.jdbc.password=LockOn.org.hdms
 
 jdbc.pool.init=1
 jdbc.pool.minIdle=3
