销售订单获取交货单接口修改

--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -19,6 +19,9 @@ PI.AUART.ZFD = ZFD
 PI.AUART.ZFD1 = ZFD1
 PI.SALEORG_TX = 4181
 
+PI.AUGRU = Z07
+PI.ZZ001 = 40
+
 PI.BusinessData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_BusinessData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
 PI.VipInfoData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_CRM_BuData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
 PI.VipPointData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=PointQuery_Out&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
