修改日志文件的输出级别

--- a/NhryService/src/main/resources/log4j.properties
+++ b/NhryService/src/main/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.R.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss} [%5p] - %c -
 log4j.appender.R.MaxFileSize=20MB
 
 log4j.appender.L=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.L.Threshold=DEBUG
+log4j.appender.L.Threshold=ERROR
 #log4j.appender.L.File=D\:/tmp/log/nhry_error.log
 log4j.appender.L.File=/opt/apache/apache-tomcat-6.0.29/logs/nhry_error.log
 log4j.appender.L.DatePattern='_'yyyy-MM-dd'.log'
