--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -30,6 +30,7 @@ PI.AUART.ZOR1 = ZOR1
 PI.AUART.ZFD = ZFD
 PI.AUART.ZFD1 = ZFD1
 PI.SALEORG_TX = 4181
+PI.CANCEL_SALEORG = 4020
 PI.AUGRU = Z07
 PI.ZZ001 = 40
 PI.MESSAGE.FLAG.OK = S
