销售订单接口增强修改

--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -21,6 +21,7 @@ PI.MasterData.mATQUERY.OPTION.BT = BT
 PI.MasterData.mATQUERY.LOW = Z005
 PI.MasterData.mATQUERY.ZORM = ZORM
 PI.MasterData.mATQUERY.VKORG = 13
+PI.MasterData.mATQUERY.VKORG17 = 17
 #²úÆ·²ã´Î
 PI.PRODH = 20
 #
