--- a/NhryService/src/main/resources/redis.properties
+++ b/NhryService/src/main/resources/redis.properties
@@ -1,5 +1,5 @@
 #=========redis settings===================#
-host=redis.nhry-dev.com
+host=test-vpc-elc-hdms.xdmjf2.0001.cnn1.cache.amazonaws.com.cn
 port=6379
 connectionTimeout=5000
 soTimeout=5000
