修改redis测试地址

--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -49,7 +49,7 @@ redis.maxIdle=10
 redis.maxActive=200
 redis.maxWait=3000
 redis.testOnBorrow=true
-redis.host=redis.nhry-dev.com
+redis.host=test-vpc-elc-hdms.xdmjf2.0001.cnn1.cache.amazonaws.com.cn
 redis.port=6379
 #=========redis settings end===================#
 #============================#
