增加测试只读库

--- a/NhryService/src/main/resources/nhry.properties
+++ b/NhryService/src/main/resources/nhry.properties
@@ -8,7 +8,7 @@ master1.jdbc.username=admin
 master1.jdbc.password=cwb85953221.com
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
-slave1.jdbc.url=jdbc:mysql://hdmsdevdb1.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
+slave1.jdbc.url=jdbc:mysql://hdmsdevcopy.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/nhdb_prod?useUnicode=true&characterEncoding=utf-8
 slave1.jdbc.username=admin
 slave1.jdbc.password=cwb85953221.com
 
@@ -50,6 +50,7 @@ redis.maxActive=200
 redis.maxWait=3000
 redis.testOnBorrow=true
 redis.host=test-vpc-elc-hdms.xdmjf2.0001.cnn1.cache.amazonaws.com.cn
+#redis.host=localhost
 redis.port=6379
 #=========redis settings end===================#
 #============================#
