年卡接口代码提交

--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -4,6 +4,8 @@ PI.MasterData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?
 PI.BusinessData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_BusinessData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
 #会员创建 / 订户维护
 PI.VipInfoData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=ZT_Q&receiverParty=&receiverService=&interface=ZT_CRM_BuData_Maintain&interfaceNamespace=urn%3Anewhopedairy.cn%3AZT%3ABusinessData
+#会员创建 / 订户维护
+PI.VipInfoDataBat.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=MemberActCreateBat&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
 #积分余额
 PI.VipPointData.URL = http://pidev.newhope.com:50000/XISOAPAdapter/MessageServlet?senderParty=&senderService=BC_Common_CRM&receiverParty=&receiverService=&interface=PointQuery_Out&interfaceNamespace=urn%3Anewhopedairy.cn%3ACRM%3ACommonData
 #积分明细
@@ -20,7 +22,7 @@ PI.MasterData.mATQUERY.OPTION.EQ = EQ
 PI.MasterData.mATQUERY.OPTION.BT = BT
 PI.MasterData.mATQUERY.LOW = Z005
 PI.MasterData.mATQUERY.ZORM = ZORM
-PI.MasterData.mATQUERY.VKORG = 13
+PI.MasterData.mATQUERY.VKORG13 = 13
 PI.MasterData.mATQUERY.VKORG17 = 17
 #产品层次
 PI.PRODH = 20
