主从库配置

--- a/NhryService/src/main/resources/nhry-prod.properties
+++ b/NhryService/src/main/resources/nhry-prod.properties
@@ -8,8 +8,8 @@ master1.jdbc.username=admin
 master1.jdbc.password=LockOn.org.hdms
 
 slave1.jdbc.driver=com.mysql.jdbc.Driver
-#slave1.jdbc.url=jdbc:mysql://hdmsprdcopy.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
-slave1.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
+slave1.jdbc.url=jdbc:mysql://hdmsprdcopy.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
+#slave1.jdbc.url=jdbc:mysql://hdmsprddb.cdxm9f1rlyqo.rds.cn-north-1.amazonaws.com.cn:3306/hdmsprd?useUnicode=true&characterEncoding=utf-8
 slave1.jdbc.username=admin
 slave1.jdbc.password=LockOn.org.hdms
 
