--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -32,6 +32,7 @@ PI.AUART.ZOR = ZOR
 PI.AUART.ZOR1 = ZOR1
 PI.AUART.ZFD = ZFD
 PI.AUART.ZFD1 = ZFD1
+PI.AUART.ZCR = ZCR
 PI.SALEORG_TX = 4181
 PI.CANCEL_SALEORG = 4020
 PI.AUGRU = Z07
