--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -24,6 +24,7 @@ PI.MasterData.mATQUERY.LOW = Z005
 PI.MasterData.mATQUERY.ZORM = ZORM
 PI.MasterData.mATQUERY.VKORG13 = 13
 PI.MasterData.mATQUERY.VKORG17 = 17
+PI.MasterData.mATQUERY.VKORG18 = 18
 #²úÆ·²ã´Î
 PI.PRODH = 20
 #
