生成免费销售订单

--- a/NhryService/src/main/resources/pi.properties
+++ b/NhryService/src/main/resources/pi.properties
@@ -37,7 +37,14 @@ PI.AUART.ZCR = ZCR
 PI.SALEORG_TX = 4181
 PI.CANCEL_SALEORG = 4020
 PI.AUGRU = Z07
+
 PI.ZZ001 = 40
+
+#\u5B66\u751F\u5976\u914D\u7F6E
+PI.ZZ001XS =43
+PI.AUGRUXS=Z97
+
+
 PI.MESSAGE.FLAG.OK = S
 PI.MESSAGE.FLAG.ERROR = E
 #¶ÌÐÅ
